project2/y.output
Terminals unused in grammar

   ASSIGN


State 60 conflicts: 4 shift/reduce


Grammar

    0 $accept: script $end

    1 script: OPENTAG emptySpace statements closetag emptySpace

    2 closetag: LBRAK SLASH SCRIPT RBRAK

    3 statements: action delimiter statements
    4           | %empty

    5 delimiter: newlines
    6          | SEMICOLON emptySpace

    7 action: declaration
    8       | assignment
    9       | docwrite
   10       | scopeChange

   11 $@1: %empty

   12 scopeChange: OPENCURL newlines $@1 statements CLOSECURL

   13 declaration: VAR ID
   14            | VAR assignment

   15 assignment: varId EQUAL result

   16 varId: varId DOT ID
   17      | ID

   18 result: expr
   19       | objdec

   20 objdec: OPENCURL newlines fieldlist emptySpace CLOSECURL

   21 fieldlist: fieldlist COMMA emptySpace field
   22          | field

   23 field: ID fieldAssign

   24 fieldAssign: COLON expr
   25            | %empty

   26 docwrite: DOCWRITE OPENPAREN paramList CLOSEPAREN

   27 paramList: paramList COMMA expr
   28          | expr
   29          | %empty

   30 expr: OPENPAREN expr CLOSEPAREN
   31     | expr operator expr
   32     | term

   33 term: NUM
   34     | ID
   35     | STRING

   36 operator: PLUS
   37         | MINUS
   38         | SLASH
   39         | MULT

   40 emptySpace: newlines
   41           | %empty

   42 newlines: newlines NEWLINE
   43         | NEWLINE


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 13 16 17 23 34
NUM (259) 33
ASSIGN (260)
PLUS (261) 36
MINUS (262) 37
SLASH (263) 2 38
MULT (264) 39
EQUAL (265) 15
NEWLINE (266) 42 43
STRING (267) 35
LBRAK (268) 2
RBRAK (269) 2
SCRIPT (270) 2
OPENTAG (271) 1
SEMICOLON (272) 6
OPENPAREN (273) 26 30
CLOSEPAREN (274) 26 30
VAR (275) 13 14
DOCWRITE (276) 26
COMMA (277) 21 27
COLON (278) 24
OPENCURL (279) 12 20
CLOSECURL (280) 12 20
DOT (281) 16


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
script (28)
    on left: 1, on right: 0
closetag (29)
    on left: 2, on right: 1
statements (30)
    on left: 3 4, on right: 1 3 12
delimiter (31)
    on left: 5 6, on right: 3
action (32)
    on left: 7 8 9 10, on right: 3
scopeChange (33)
    on left: 12, on right: 10
$@1 (34)
    on left: 11, on right: 12
declaration (35)
    on left: 13 14, on right: 7
assignment (36)
    on left: 15, on right: 8 14
varId (37)
    on left: 16 17, on right: 15 16
result (38)
    on left: 18 19, on right: 15
objdec (39)
    on left: 20, on right: 19
fieldlist (40)
    on left: 21 22, on right: 20 21
field (41)
    on left: 23, on right: 21 22
fieldAssign (42)
    on left: 24 25, on right: 23
docwrite (43)
    on left: 26, on right: 9
paramList (44)
    on left: 27 28 29, on right: 26 27
expr (45)
    on left: 30 31 32, on right: 18 24 27 28 30 31
term (46)
    on left: 33 34 35, on right: 32
operator (47)
    on left: 36 37 38 39, on right: 31
emptySpace (48)
    on left: 40 41, on right: 1 6 20 21
newlines (49)
    on left: 42 43, on right: 5 12 20 40 42


State 0

    0 $accept: . script $end

    OPENTAG  shift, and go to state 1

    script  go to state 2


State 1

    1 script: OPENTAG . emptySpace statements closetag emptySpace

    NEWLINE  shift, and go to state 3

    $default  reduce using rule 41 (emptySpace)

    emptySpace  go to state 4
    newlines    go to state 5


State 2

    0 $accept: script . $end

    $end  shift, and go to state 6


State 3

   43 newlines: NEWLINE .

    $default  reduce using rule 43 (newlines)


State 4

    1 script: OPENTAG emptySpace . statements closetag emptySpace

    ID        shift, and go to state 7
    VAR       shift, and go to state 8
    DOCWRITE  shift, and go to state 9
    OPENCURL  shift, and go to state 10

    $default  reduce using rule 4 (statements)

    statements   go to state 11
    action       go to state 12
    scopeChange  go to state 13
    declaration  go to state 14
    assignment   go to state 15
    varId        go to state 16
    docwrite     go to state 17


State 5

   40 emptySpace: newlines .
   42 newlines: newlines . NEWLINE

    NEWLINE  shift, and go to state 18

    $default  reduce using rule 40 (emptySpace)


State 6

    0 $accept: script $end .

    $default  accept


State 7

   17 varId: ID .

    $default  reduce using rule 17 (varId)


State 8

   13 declaration: VAR . ID
   14            | VAR . assignment

    ID  shift, and go to state 19

    assignment  go to state 20
    varId       go to state 16


State 9

   26 docwrite: DOCWRITE . OPENPAREN paramList CLOSEPAREN

    OPENPAREN  shift, and go to state 21


State 10

   12 scopeChange: OPENCURL . newlines $@1 statements CLOSECURL

    NEWLINE  shift, and go to state 3

    newlines  go to state 22


State 11

    1 script: OPENTAG emptySpace statements . closetag emptySpace

    LBRAK  shift, and go to state 23

    closetag  go to state 24


State 12

    3 statements: action . delimiter statements

    NEWLINE    shift, and go to state 3
    SEMICOLON  shift, and go to state 25

    delimiter  go to state 26
    newlines   go to state 27


State 13

   10 action: scopeChange .

    $default  reduce using rule 10 (action)


State 14

    7 action: declaration .

    $default  reduce using rule 7 (action)


State 15

    8 action: assignment .

    $default  reduce using rule 8 (action)


State 16

   15 assignment: varId . EQUAL result
   16 varId: varId . DOT ID

    EQUAL  shift, and go to state 28
    DOT    shift, and go to state 29


State 17

    9 action: docwrite .

    $default  reduce using rule 9 (action)


State 18

   42 newlines: newlines NEWLINE .

    $default  reduce using rule 42 (newlines)


State 19

   13 declaration: VAR ID .
   17 varId: ID .

    EQUAL     reduce using rule 17 (varId)
    DOT       reduce using rule 17 (varId)
    $default  reduce using rule 13 (declaration)


State 20

   14 declaration: VAR assignment .

    $default  reduce using rule 14 (declaration)


State 21

   26 docwrite: DOCWRITE OPENPAREN . paramList CLOSEPAREN

    ID         shift, and go to state 30
    NUM        shift, and go to state 31
    STRING     shift, and go to state 32
    OPENPAREN  shift, and go to state 33

    $default  reduce using rule 29 (paramList)

    paramList  go to state 34
    expr       go to state 35
    term       go to state 36


State 22

   12 scopeChange: OPENCURL newlines . $@1 statements CLOSECURL
   42 newlines: newlines . NEWLINE

    NEWLINE  shift, and go to state 18

    $default  reduce using rule 11 ($@1)

    $@1  go to state 37


State 23

    2 closetag: LBRAK . SLASH SCRIPT RBRAK

    SLASH  shift, and go to state 38


State 24

    1 script: OPENTAG emptySpace statements closetag . emptySpace

    NEWLINE  shift, and go to state 3

    $default  reduce using rule 41 (emptySpace)

    emptySpace  go to state 39
    newlines    go to state 5


State 25

    6 delimiter: SEMICOLON . emptySpace

    NEWLINE  shift, and go to state 3

    $default  reduce using rule 41 (emptySpace)

    emptySpace  go to state 40
    newlines    go to state 5


State 26

    3 statements: action delimiter . statements

    ID        shift, and go to state 7
    VAR       shift, and go to state 8
    DOCWRITE  shift, and go to state 9
    OPENCURL  shift, and go to state 10

    $default  reduce using rule 4 (statements)

    statements   go to state 41
    action       go to state 12
    scopeChange  go to state 13
    declaration  go to state 14
    assignment   go to state 15
    varId        go to state 16
    docwrite     go to state 17


State 27

    5 delimiter: newlines .
   42 newlines: newlines . NEWLINE

    NEWLINE  shift, and go to state 18

    $default  reduce using rule 5 (delimiter)


State 28

   15 assignment: varId EQUAL . result

    ID         shift, and go to state 30
    NUM        shift, and go to state 31
    STRING     shift, and go to state 32
    OPENPAREN  shift, and go to state 33
    OPENCURL   shift, and go to state 42

    result  go to state 43
    objdec  go to state 44
    expr    go to state 45
    term    go to state 36


State 29

   16 varId: varId DOT . ID

    ID  shift, and go to state 46


State 30

   34 term: ID .

    $default  reduce using rule 34 (term)


State 31

   33 term: NUM .

    $default  reduce using rule 33 (term)


State 32

   35 term: STRING .

    $default  reduce using rule 35 (term)


State 33

   30 expr: OPENPAREN . expr CLOSEPAREN

    ID         shift, and go to state 30
    NUM        shift, and go to state 31
    STRING     shift, and go to state 32
    OPENPAREN  shift, and go to state 33

    expr  go to state 47
    term  go to state 36


State 34

   26 docwrite: DOCWRITE OPENPAREN paramList . CLOSEPAREN
   27 paramList: paramList . COMMA expr

    CLOSEPAREN  shift, and go to state 48
    COMMA       shift, and go to state 49


State 35

   28 paramList: expr .
   31 expr: expr . operator expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    SLASH  shift, and go to state 52
    MULT   shift, and go to state 53

    $default  reduce using rule 28 (paramList)

    operator  go to state 54


State 36

   32 expr: term .

    $default  reduce using rule 32 (expr)


State 37

   12 scopeChange: OPENCURL newlines $@1 . statements CLOSECURL

    ID        shift, and go to state 7
    VAR       shift, and go to state 8
    DOCWRITE  shift, and go to state 9
    OPENCURL  shift, and go to state 10

    $default  reduce using rule 4 (statements)

    statements   go to state 55
    action       go to state 12
    scopeChange  go to state 13
    declaration  go to state 14
    assignment   go to state 15
    varId        go to state 16
    docwrite     go to state 17


State 38

    2 closetag: LBRAK SLASH . SCRIPT RBRAK

    SCRIPT  shift, and go to state 56


State 39

    1 script: OPENTAG emptySpace statements closetag emptySpace .

    $default  reduce using rule 1 (script)


State 40

    6 delimiter: SEMICOLON emptySpace .

    $default  reduce using rule 6 (delimiter)


State 41

    3 statements: action delimiter statements .

    $default  reduce using rule 3 (statements)


State 42

   20 objdec: OPENCURL . newlines fieldlist emptySpace CLOSECURL

    NEWLINE  shift, and go to state 3

    newlines  go to state 57


State 43

   15 assignment: varId EQUAL result .

    $default  reduce using rule 15 (assignment)


State 44

   19 result: objdec .

    $default  reduce using rule 19 (result)


State 45

   18 result: expr .
   31 expr: expr . operator expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    SLASH  shift, and go to state 52
    MULT   shift, and go to state 53

    $default  reduce using rule 18 (result)

    operator  go to state 54


State 46

   16 varId: varId DOT ID .

    $default  reduce using rule 16 (varId)


State 47

   30 expr: OPENPAREN expr . CLOSEPAREN
   31     | expr . operator expr

    PLUS        shift, and go to state 50
    MINUS       shift, and go to state 51
    SLASH       shift, and go to state 52
    MULT        shift, and go to state 53
    CLOSEPAREN  shift, and go to state 58

    operator  go to state 54


State 48

   26 docwrite: DOCWRITE OPENPAREN paramList CLOSEPAREN .

    $default  reduce using rule 26 (docwrite)


State 49

   27 paramList: paramList COMMA . expr

    ID         shift, and go to state 30
    NUM        shift, and go to state 31
    STRING     shift, and go to state 32
    OPENPAREN  shift, and go to state 33

    expr  go to state 59
    term  go to state 36


State 50

   36 operator: PLUS .

    $default  reduce using rule 36 (operator)


State 51

   37 operator: MINUS .

    $default  reduce using rule 37 (operator)


State 52

   38 operator: SLASH .

    $default  reduce using rule 38 (operator)


State 53

   39 operator: MULT .

    $default  reduce using rule 39 (operator)


State 54

   31 expr: expr operator . expr

    ID         shift, and go to state 30
    NUM        shift, and go to state 31
    STRING     shift, and go to state 32
    OPENPAREN  shift, and go to state 33

    expr  go to state 60
    term  go to state 36


State 55

   12 scopeChange: OPENCURL newlines $@1 statements . CLOSECURL

    CLOSECURL  shift, and go to state 61


State 56

    2 closetag: LBRAK SLASH SCRIPT . RBRAK

    RBRAK  shift, and go to state 62


State 57

   20 objdec: OPENCURL newlines . fieldlist emptySpace CLOSECURL
   42 newlines: newlines . NEWLINE

    ID       shift, and go to state 63
    NEWLINE  shift, and go to state 18

    fieldlist  go to state 64
    field      go to state 65


State 58

   30 expr: OPENPAREN expr CLOSEPAREN .

    $default  reduce using rule 30 (expr)


State 59

   27 paramList: paramList COMMA expr .
   31 expr: expr . operator expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    SLASH  shift, and go to state 52
    MULT   shift, and go to state 53

    $default  reduce using rule 27 (paramList)

    operator  go to state 54


State 60

   31 expr: expr . operator expr
   31     | expr operator expr .

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    SLASH  shift, and go to state 52
    MULT   shift, and go to state 53

    PLUS      [reduce using rule 31 (expr)]
    MINUS     [reduce using rule 31 (expr)]
    SLASH     [reduce using rule 31 (expr)]
    MULT      [reduce using rule 31 (expr)]
    $default  reduce using rule 31 (expr)

    operator  go to state 54


State 61

   12 scopeChange: OPENCURL newlines $@1 statements CLOSECURL .

    $default  reduce using rule 12 (scopeChange)


State 62

    2 closetag: LBRAK SLASH SCRIPT RBRAK .

    $default  reduce using rule 2 (closetag)


State 63

   23 field: ID . fieldAssign

    COLON  shift, and go to state 66

    $default  reduce using rule 25 (fieldAssign)

    fieldAssign  go to state 67


State 64

   20 objdec: OPENCURL newlines fieldlist . emptySpace CLOSECURL
   21 fieldlist: fieldlist . COMMA emptySpace field

    NEWLINE  shift, and go to state 3
    COMMA    shift, and go to state 68

    $default  reduce using rule 41 (emptySpace)

    emptySpace  go to state 69
    newlines    go to state 5


State 65

   22 fieldlist: field .

    $default  reduce using rule 22 (fieldlist)


State 66

   24 fieldAssign: COLON . expr

    ID         shift, and go to state 30
    NUM        shift, and go to state 31
    STRING     shift, and go to state 32
    OPENPAREN  shift, and go to state 33

    expr  go to state 70
    term  go to state 36


State 67

   23 field: ID fieldAssign .

    $default  reduce using rule 23 (field)


State 68

   21 fieldlist: fieldlist COMMA . emptySpace field

    NEWLINE  shift, and go to state 3

    $default  reduce using rule 41 (emptySpace)

    emptySpace  go to state 71
    newlines    go to state 5


State 69

   20 objdec: OPENCURL newlines fieldlist emptySpace . CLOSECURL

    CLOSECURL  shift, and go to state 72


State 70

   24 fieldAssign: COLON expr .
   31 expr: expr . operator expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    SLASH  shift, and go to state 52
    MULT   shift, and go to state 53

    $default  reduce using rule 24 (fieldAssign)

    operator  go to state 54


State 71

   21 fieldlist: fieldlist COMMA emptySpace . field

    ID  shift, and go to state 63

    field  go to state 73


State 72

   20 objdec: OPENCURL newlines fieldlist emptySpace CLOSECURL .

    $default  reduce using rule 20 (objdec)


State 73

   21 fieldlist: fieldlist COMMA emptySpace field .

    $default  reduce using rule 21 (fieldlist)
